--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title:          Tale
 description:    "Minimal Jekyll theme for storytellers"
+baseurl:        "/tale"
 url:            "https://chesterhow.github.io"
 
 # Google Analytics
@@ -38,3 +39,4 @@ exclude: [ Gemfile, Gemfile.lock, tale.gemspec ]
 
 # Disqus (Set to your disqus id)
 disqus:         jekyll-tale
+remote_theme: chesterhow/tale
